--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release_plugins_push.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release_plugins_push.yaml
@@ -13,9 +13,9 @@
           name: version
           values:
           - 'nightly'
-          - '1.11'
           - '1.12'
           - '1.13'
+          - '1.14'
       - axis:
           type: user-defined
           name: os
@@ -26,7 +26,7 @@
           - f21
           - f24
     execution-strategy:
-      combination-filter: 'os == "el7" || (os == "f21" && version == "1.11") || (os == "f24" && (version == "1.12" || version == "1.13" || version == "nightly")) || (os == "el6" && (version == "1.11" || version == "1.12"))'
+      combination-filter: 'os == "el7" || os == "f24" || (os == "el6" && (version == "1.12"))'
       sequential: true
     builders:
       - trigger-builds:
