--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release_test.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release_test.yaml
@@ -25,15 +25,12 @@
           values:
           - el6
           - el7
-          - f21
           - f24
-          - precise
           - jessie
           - trusty
-          - wheezy
           - xenial
     execution-strategy:
-      combination-filter: '!( ((major_version == "1.11") && os == "f24") || ((major_version == "1.12" || major_version == "1.13") && os == "f21") || ((major_version == "1.12" || major_version == "1.13") && os == "wheezy") || ((major_version == "1.12" || major_version == "1.13") && os == "precise") || ((major_version == "1.11") && os == "xenial") || ((major_version == "1.13") && os == "el6") )'
+      combination-filter: 'os == "el7" || os == "f24" || (os == "el6" && (version == "1.12")) || os == "jessie" || os == "trusty" || os == "xenial"'
     publishers:
       - trigger-parameterized-builds:
           - project: 'release_push_deb, release_push_rpm'
