Add 1.15, remove 1.12 from build/release jobs

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release_test.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release_test.yaml
@@ -23,14 +23,13 @@
           type: user-defined
           name: os
           values:
-          - el6
           - el7
           - f24
           - jessie
           - trusty
           - xenial
     execution-strategy:
-      combination-filter: 'os == "el7" || os == "f24" || (os == "el6" && (version == "1.12")) || os == "jessie" || os == "trusty" || os == "xenial"'
+      combination-filter: 'os == "el7" || os == "f24" || os == "jessie" || os == "trusty" || os == "xenial"'
     publishers:
       - trigger-parameterized-builds:
           - project: 'release_push_deb, release_push_rpm'
