re-enable ARMv8 builds for Debian/jessie
Nodesource does provide ARMv8 packages of Node.js now:
https://nodesource.com/blog/announcing-arm64-support-in-our-node-js-package-repositories

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_build_deb_coreproject.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_build_deb_coreproject.yaml
@@ -31,7 +31,7 @@
           values:
           - debian
     execution-strategy:
-      combination-filter: '((onlyos == "all") || onlyos == os) && !(arch == "armv7" && (os == "trusty")) && !(arch == "armv8" && (os == "trusty" || os == "jessie"))'
+      combination-filter: '((onlyos == "all") || onlyos == os) && !(arch == "armv7" && (os == "trusty")) && !(arch == "armv8" && os == "trusty")'
     builders:
       - build_deb_coreproject
     publishers:
