--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release_plugins_push.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release_plugins_push.yaml
@@ -23,7 +23,7 @@
           - el7
           - f24
     execution-strategy:
-      combination-filter: 'os == "el7" || os == "f24"
+      combination-filter: 'os == "el7" || os == "f24"'
       sequential: true
     builders:
       - trigger-builds:
