--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release_nightly_test_deb.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release_nightly_test_deb.yaml
@@ -13,7 +13,7 @@
     builders:
       - trigger-builds:
         - project: systest_foreman
-          predefined-parameters: "os=${os}\nrepo=nightly\nstaging=true\npl_puppet=true"
+          predefined-parameters: "os=${os}\nrepo=nightly\nstaging=true\npl_puppet=pc1"
           block: true
     axes:
       - axis:
