--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/systest_foreman_puppet_os.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/systest_foreman_puppet_os.yaml
@@ -16,10 +16,10 @@
           type: user-defined
           name: os
           values:
-          - el7
-          - f24
+          # - el7  # older than the minimum installer version
+          # - f24  # older than the minimum installer version
           - jessie
           # - trusty  # older than the minimum installer version
-          - xenial
+          # - xenial  # older than the minimum installer version
     publishers:
       - ircbot_freenode
