Use Puppet PC1 repository by default

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/systest_foreman.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/systest_foreman.yaml
@@ -27,7 +27,7 @@
           description: 'OS code, e.g. <code>el6</code>, <code>f18</code>, <code>wheezy</code>'
       - string:
           name: pl_puppet
-          default: stable
+          default: pc1
           description: 'Whether to install Puppet from Puppet Labs first, instead of using the distro version. Set to stable/pc1/nightly for a specific repo, or false to disable.'
       - bool:
           name: run_puppet_tests
