--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_build_deb_coreproject.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_build_deb_coreproject.yaml
@@ -16,6 +16,7 @@
           name: os
           values:
           - jessie
+          - stretch
           - trusty
           - xenial
       - axis:
@@ -54,6 +55,7 @@ Any value other than "theforeman" will be pushed to http://stagingdeb.theforeman
           choices:
             - all
             - jessie
+            - stretch
             - trusty
             - xenial
           description: 'Restrict matrix job to just the one OS.'
