--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_build_deb_dependency.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_build_deb_dependency.yaml
@@ -19,6 +19,7 @@
           name: os
           values:
           - jessie
+          - stretch
           - trusty
           - xenial
       - axis:
