Test and push stretch packages

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release_nightly_push_deb.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release_nightly_push_deb.yaml
@@ -16,6 +16,7 @@
           name: os
           values:
           - jessie
+          - stretch
           - trusty
           - xenial
     publishers:
