--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release_nightly_test_deb.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release_nightly_test_deb.yaml
@@ -21,6 +21,7 @@
           name: os
           values:
           - jessie
+          - stretch
           - trusty
           - xenial
     publishers:
