--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/systest_foreman_mysql.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/systest_foreman_mysql.yaml
@@ -19,6 +19,7 @@
           - el7
           - f24
           - jessie
+          - stretch
           - trusty
           - xenial
     publishers:
