--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/systest_foreman_puppet_pc1.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/systest_foreman_puppet_pc1.yaml
@@ -19,6 +19,7 @@
           - el7
           - f24
           - jessie
+          # - stretch  # not available yet
           - trusty
           - xenial
     publishers:
