desupport Ubuntu/trusty for nightlies

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_build_deb_plugin.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_build_deb_plugin.yaml
@@ -15,7 +15,7 @@
           type: user-defined
           name: os
           values:
-          - trusty
+          - jessie
       - axis:
           type: slave
           name: arch
