--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_build_deb_proxy_plugin.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_build_deb_proxy_plugin.yaml
@@ -19,7 +19,7 @@
           type: user-defined
           name: os
           values:
-          - trusty
+          - jessie
       - axis:
           type: slave
           name: arch
