--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release_test.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release_test.yaml
@@ -30,7 +30,7 @@
           - trusty
           - xenial
     execution-strategy:
-      combination-filter: 'os == "el7" || os == "f24" || os == "jessie" || (os == "stretch" && major_version != "1.14" && major_version != "1.15") || os == "trusty" || os == "xenial"'
+      combination-filter: 'os == "el7" || os == "f24" || os == "jessie" || (os == "stretch" && major_version != "1.14" && major_version != "1.15") || (os == "trusty" && major_version == "1.15") || os == "xenial"'
     publishers:
       - trigger-parameterized-builds:
           - project: 'release_push_deb, release_push_rpm'
