add herculesteam-augeasproviders_mounttab 2.0.1

--- a/.gitmodules
+++ b/.gitmodules
@@ -107,3 +107,6 @@
 [submodule "puppet/modules/augeasproviders_core"]
 	path = puppet/modules/augeasproviders_core
 	url = https://github.com/hercules-team/augeasproviders_core.git
+[submodule "puppet/modules/augeasproviders_mounttab"]
+	path = puppet/modules/augeasproviders_mounttab
+	url = https://github.com/hercules-team/augeasproviders_mounttab.git
