PC1 systest is known broken on xenial

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/systest_foreman_puppet_pc1.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/systest_foreman_puppet_pc1.yaml
@@ -20,6 +20,6 @@
           - f24
           - jessie
           # - stretch  # not available yet
-          - xenial
+          # - xenial  # https://tickets.puppetlabs.com/browse/SERVER-17
     publishers:
       - ircbot_freenode
