--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release_plugins_push.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release_plugins_push.yaml
@@ -13,17 +13,16 @@
           name: version
           values:
           - 'nightly'
-          - '1.13'
           - '1.14'
           - '1.15'
+          - '1.16'
       - axis:
           type: user-defined
           name: os
           values:
           - el7
-          - f24
     execution-strategy:
-      combination-filter: 'os == "el7" || os == "f24"'
+      combination-filter: 'os == "el7"'
       sequential: true
     builders:
       - trigger-builds:
