disable Debian/stretch systest for now

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release_nightly_test_deb.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release_nightly_test_deb.yaml
@@ -21,7 +21,7 @@
           name: os
           values:
           - jessie
-          - stretch
+            # - stretch # OS packages are too old and there's no puppetserver 5 from PL, yet
           - xenial
     publishers:
       - trigger:
