--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/plugins/foreman-tasks.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/plugins/foreman-tasks.yaml
@@ -1,5 +1,10 @@
 - project:
     name: foreman-tasks
     defaults: plugin
+    branch:
+      - master:
+          foreman_branch: develop
+      - 0.9.x:
+          foreman_branch: 1.15-stable
     jobs:
       - 'test_plugin_{name}_{branch}'
