Update combination filters for Debian after Ruby 2.1 dropping

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_build_deb_plugin.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_build_deb_plugin.yaml
@@ -15,7 +15,7 @@
           type: user-defined
           name: os
           values:
-          - jessie
+          - xenial
       - axis:
           type: slave
           name: arch
