--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/systest_foreman_puppet_nightly.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/systest_foreman_puppet_nightly.yaml
@@ -18,8 +18,7 @@
           values:
           - el7
           - f24
-          - jessie
-          # - stretch  # not available yet
+          - stretch
           - xenial
     publishers:
       - ircbot_freenode
