use Puppet 5 for nightly systests

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release_nightly_test_deb.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release_nightly_test_deb.yaml
@@ -13,14 +13,14 @@
     builders:
       - trigger-builds:
         - project: systest_foreman
-          predefined-parameters: "os=${os}\nrepo=nightly\nstaging=true"
+          predefined-parameters: "os=${os}\nrepo=nightly\nstaging=true\npl_puppet=puppet5"
           block: true
     axes:
       - axis:
           type: user-defined
           name: os
           values:
-            # - stretch # OS packages are too old and there's no puppetserver 5 from PL, yet
+          - stretch
           - xenial
     publishers:
       - trigger:
