--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release_nightly_test_rpm.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release_nightly_test_rpm.yaml
@@ -12,7 +12,7 @@
           block: true
       - trigger-builds:
         - project: systest_foreman
-          predefined-parameters: "os=${os}\nrepo=nightly\nstaging=true"
+          predefined-parameters: "os=${os}\nrepo=nightly\nstaging=true\npl_puppet=puppet5"
           block: true
     axes:
       - axis:
