--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_develop_pr_core.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_develop_pr_core.yaml
@@ -36,6 +36,9 @@
           name: slave
           values:
             - fast
+    execution-strategy:
+      combination-filter: >
+        ((database == 'postgresql') && ((ruby == '2.2') || (ruby == '2.3') || (ruby == '2.4'))) || ((database == 'mysql') && (ruby == '2.2')) || ((database == 'sqlite3') && (ruby == '2.2'))
     builders:
       - shell: !include-raw: scripts/test/test_develop.sh
     publishers:
