--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_plugin_matrix.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_plugin_matrix.yaml
@@ -59,7 +59,7 @@
             - fast
     execution-strategy:
       combination-filter: >
-        (database == 'postgresql') || (ruby == '2.4')
+        ((database == 'postgresql') && ((ruby == '2.2') || (ruby == '2.3') || (ruby == '2.4'))) || ((database == 'mysql') && (ruby == '2.2')) || ((database == 'sqlite3') && (ruby == '2.2'))
     wrappers:
       - timestamps
       - abort_build:
