--- a/.gitmodules
+++ b/.gitmodules
@@ -119,3 +119,6 @@
 [submodule "puppet/modules/datacat"]
 	path = puppet/modules/datacat
 	url = https://github.com/richardc/puppet-datacat.git
+[submodule "puppet/modules/chromedriver"]
+	path = puppet/modules/chromedriver
+	url = https://github.com/rfletcher/puppet-chromedriver
