--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release_test.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release_test.yaml
@@ -29,7 +29,7 @@
           - trusty
           - xenial
     execution-strategy:
-      combination-filter: 'os == "el7" || (os == "jessie" && (major_version == "1.15" || major_version == "1.16")) || (os == "stretch" && major_version != "1.14" && major_version != "1.15") || (os == "trusty" && major_version == "1.15") || os == "xenial"'
+      combination-filter: 'os == "el7" || (os == "jessie" && (major_version == "1.15" || major_version == "1.16")) || (os == "stretch" && major_version != "1.15") || (os == "trusty" && major_version == "1.15") || os == "xenial"'
     publishers:
       - trigger-parameterized-builds:
           - project: 'release_push_deb, release_push_rpm'
