--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release_test.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release_test.yaml
@@ -16,20 +16,19 @@
           block: true
       - trigger-builds:
         - project: systest_foreman
-          predefined-parameters: "os=${os}\nrepo=${major_version}\nstaging=true\nexpected_version=${version}"
+          predefined-parameters: "os=${os}\nrepo=${major_version}\nrepo_flavor=staging\nexpected_version=${version}"
           block: true
     axes:
       - axis:
           type: user-defined
           name: os
           values:
-          - el7
-          - jessie
-          - stretch
-          - trusty
-          - xenial
+          - centos7
+          - debian8
+          - debian9
+          - ubuntu1604
     execution-strategy:
-      combination-filter: 'os == "el7" || (os == "jessie" && (major_version == "1.15" || major_version == "1.16")) || (os == "stretch" && major_version != "1.15") || (os == "trusty" && major_version == "1.15") || os == "xenial"'
+      combination-filter: 'os != "debian8" || major_version == "1.16"'
     publishers:
       - trigger-parameterized-builds:
           - project: 'release_push_deb, release_push_rpm'
