add foreman-tasks 0.10 test job

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/plugins/foreman-tasks.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/plugins/foreman-tasks.yaml
@@ -4,6 +4,8 @@
     branch:
       - master:
           foreman_branch: develop
+      - 0.10.x:
+          foreman_branch: 1.16-stable
       - 0.9.x:
           foreman_branch: 1.15-stable
     jobs:
