--- a/.gitmodules
+++ b/.gitmodules
@@ -122,3 +122,6 @@
 [submodule "puppet/modules/hocon"]
 	path = puppet/modules/hocon
 	url = https://github.com/puppetlabs/puppetlabs-hocon.git
+[submodule "puppet/modules/puppet_authorization"]
+	path = puppet/modules/puppet_authorization
+	url = https://github.com/puppetlabs/puppetlabs-puppet_authorization.git
