--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_plugin_matrix.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_plugin_matrix.yaml
@@ -44,7 +44,6 @@
           type: user-defined
           name: ruby
           values:
-            - 2.2
             - 2.3
             - 2.4
       - axis:
@@ -59,7 +58,7 @@
             - fast
     execution-strategy:
       combination-filter: >
-        ((database == 'postgresql') && ((ruby == '2.2') || (ruby == '2.3') || (ruby == '2.4'))) || ((database == 'mysql') && (ruby == '2.4')) || ((database == 'sqlite3') && (ruby == '2.4'))
+        ((database == 'postgresql') && ((ruby == '2.3') || (ruby == '2.4'))) || ((database == 'mysql') && (ruby == '2.4')) || ((database == 'sqlite3') && (ruby == '2.4'))
     wrappers:
       - timestamps
       - abort_build:
