--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_proxy_1_17_stable.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_proxy_1_17_stable.yaml
@@ -32,7 +32,7 @@
           - 4.10.9
           - 5.3.3
     execution-strategy:
-      combination-filter: '!( (ruby ==~ /2\.[0-1].*/ && puppet ==~ /3\.8.*/) || (ruby ==~ /2\.[1-9].*/ && puppet ==~ /4\.10\.9/) || (ruby ==~ /2\.[4-9].*/ && puppet ==~ /5\.3\.3/) )'
+      combination-filter: '(ruby ==~ /2\.[0-1].*/ && puppet ==~ /3\.8.*/) || (ruby ==~ /2\.[1-9].*/ && puppet ==~ /4\.10\.9/) || (ruby ==~ /2\.[4-9].*/ && puppet ==~ /5\.3\.3/)'
     builders:
       - test_proxy
     publishers:
