--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_develop_pr_core.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_develop_pr_core.yaml
@@ -23,6 +23,7 @@
           values:
             - 2.3
             - 2.4
+            - 2.5
       - axis:
           type: user-defined
           name: database
@@ -37,7 +38,7 @@
             - fast
     execution-strategy:
       combination-filter: >
-        ((database == 'postgresql') && ((ruby == '2.3') || (ruby == '2.4'))) || ((database == 'mysql') && (ruby == '2.4')) || ((database == 'sqlite3') && (ruby == '2.4'))
+        ((database == 'postgresql') && ((ruby == '2.3') || (ruby == '2.4') || (ruby == '2.5'))) || ((database == 'mysql') && (ruby == '2.4')) || ((database == 'sqlite3') && (ruby == '2.4'))
     builders:
       - shell: !include-raw: scripts/test/test_develop.sh
     publishers:
