Fix release cron and pipeline job

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/foreman-nightly-release.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/foreman-nightly-release.yaml
@@ -1,6 +1,8 @@
 - job:
     name: foreman-nightly-release
     project-type: workflow
+    triggers:
+      - timed: 'H 21 * * *'
     dsl:
       !include-raw:
         - pipelines/release/foremanRelease.groovy
