--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/foreman-plugins-release.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/foreman-plugins-release.yaml
@@ -1,6 +1,8 @@
 - job:
     name: foreman-plugins-release
     project-type: workflow
+    triggers:
+      - timed: 'H H * * *'
     dsl:
       !include-raw:
         - pipelines/release/foremanPluginsRelease.groovy
