--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/katello-nightly-release.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/katello-nightly-release.yaml
@@ -1,6 +1,8 @@
 - job:
     name: katello-nightly-release
     project-type: workflow
+    triggers:
+      - timed: 'H 23 * * *'
     dsl:
       !include-raw:
         - pipelines/release/katelloRelease.groovy
