allow for packaging being tested in a pipeline
the code is based on tfmROR51.groovy, which should also migrate to this
new lib as soon as obal supports copr properly

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/triggers/github_pr.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/triggers/github_pr.yaml
@@ -21,6 +21,14 @@
           <<: *ghprb_defaults
 
 - trigger:
+    name: github_pr_rpm_develop
+    triggers:
+      - github-pull-request:
+          <<: *ghprb_defaults
+          white-list-target-branches:
+            - rpm/develop
+
+- trigger:
     name: github_pr_pipeline
     triggers:
       - github-pull-request:
