--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_kafo_master.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_kafo_master.yaml
@@ -19,8 +19,6 @@
           type: user-defined
           name: ruby
           values:
-          - 1.8.7
-          - 1.9.3
           - 2.0.0
           - 2.1
           - 2.2
@@ -30,14 +28,10 @@
           type: user-defined
           name: puppet
           values:
-          - 3.8.0
-          - 4.4.0
-          - 4.5.0
-          - 4.6.0
-          - 4.9.0
           - 4.10.0
+          - 5.0
     execution-strategy:
-      combination-filter: '!( (ruby ==~ /^2\.[2-9].*/ && puppet ==~ /^3\..*/) || (ruby ==~ /^1\..*/ && puppet ==~ /^4\..*/) )'
+      combination-filter: '!(ruby ==~ /^2\.[0-3]\..*/ && puppet ==~ /^5\..*/) )'
       touchstone:
         expr: 'ruby=="2.1" && puppet=="4.10.0"'
         result: 'stable'
