--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_kafo_master.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_kafo_master.yaml
@@ -31,7 +31,7 @@
           - 4.10.0
           - 5.0
     execution-strategy:
-      combination-filter: '!(ruby ==~ /^2\.[0-3]\..*/ && puppet ==~ /^5\..*/) )'
+      combination-filter: '!(ruby ==~ /^2\.[0-3]\..*/ && puppet ==~ /^5\..*/)'
       touchstone:
         expr: 'ruby=="2.1" && puppet=="4.10.0"'
         result: 'stable'
