--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/scm/kafo.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/scm/kafo.yaml
@@ -5,3 +5,13 @@
           url: https://github.com/theforeman/kafo.git
           branches:
             - '{branch}'
+
+- scm:
+    name: kafo_pr
+    scm:
+      - git:
+          url: https://github.com/theforeman/kafo.git
+          wipe-workspace: true
+          branches:
+            - '${ghprbActualCommit}'
+          refspec: '+refs/pull/*:refs/remotes/origin/pr/*'
