Update tfm-ror51 to use Obal

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging/tfm-ror51-pr-test.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging/tfm-ror51-pr-test.yaml
@@ -11,4 +11,5 @@
     dsl:
       !include-raw:
         - pipelines/test/tfmROR51.groovy
-        - pipelines/lib/ansible.groovy
+        - pipelines/lib/git.groovy
+        - pipelines/lib/obal.groovy
