--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging/tfm-ror51-cleanup-copr.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging/tfm-ror51-cleanup-copr.yaml
@@ -8,4 +8,4 @@
     dsl:
       !include-raw:
         - pipelines/test/tfmROR51CoprCleanup.groovy
-        - pipelines/lib/ansible.groovy
+        - pipelines/lib/obal.groovy
