--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/tfm-ror51-release.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/tfm-ror51-release.yaml
@@ -10,4 +10,4 @@
     dsl:
       !include-raw:
         - pipelines/release/tfmROR51.groovy
-        - pipelines/lib/ansible.groovy
+        - pipelines/lib/obal.groovy
