Convert packaging_test_pull_request to JJB

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/scm/foreman-packaging.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/scm/foreman-packaging.yaml
@@ -20,3 +20,14 @@
           skip-tag: true
           branches:
             - 'origin/{branch}'
+- scm:
+    name: foreman-rpm-packaging-pr
+    scm:
+      - git:
+          name: upstream
+          url: https://github.com/theforeman/foreman-packaging
+          submodule:
+            recursive: true
+          skip-tag: true
+          branches:
+            - 'upstream/{branch}'
