--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_test_pull_request.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_test_pull_request.yaml
@@ -17,7 +17,7 @@
       - foreman-rpm-packaging-pr
     triggers:
       - github_pr:
-          context: 'foreman-packaging'
+          context: 'packaging'
     builders:
       - shell: !include-raw: scripts/test/packaging_test_pull_request_deb.sh
       - trigger-builds:
