Set status url to pipeline link for pipelines

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/tests/katello-pr-test.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/tests/katello-pr-test.yaml
@@ -9,7 +9,7 @@
       - github:
           url: https://github.com/Katello/katello
     triggers:
-      - github_pr:
+      - github_pr_pipeline:
           context: 'katello'
     dsl:
       !include-raw:
