--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/triggers/github_pr.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/triggers/github_pr.yaml
@@ -1,17 +1,29 @@
+- ghprb_defaults: &ghprb_defaults
+    name: ghprb_defaults
+    org-list:
+      - theforeman
+      - katello
+    cron: 'H * * * *'
+    trigger-phrase: '.*\[test {context}\].*'
+    github-hooks: true
+    allow-whitelist-orgs-as-admins: true
+    auth-id: '68200ee2-e1e8-4121-9209-f52564d5a973'
+    status-context: '{context}'
+    triggered-status: 'Test queued, please be patient'
+    started-status: 'Test running'
+    status-add-test-results: true
+    cancel-builds-on-update: true
+
 - trigger:
     name: github_pr
     triggers:
       - github-pull-request:
-          org-list:
-            - theforeman
-            - katello
-          cron: 'H * * * *'
-          trigger-phrase: '.*\[test {context}\].*'
-          github-hooks: true
-          allow-whitelist-orgs-as-admins: true
-          auth-id: '68200ee2-e1e8-4121-9209-f52564d5a973'
-          status-context: '{context}'
-          triggered-status: 'Test queued, please be patient'
-          started-status: 'Test running'
-          status-add-test-results: true
-          cancel-builds-on-update: true
+          <<: *ghprb_defaults
+
+- trigger:
+    name: github_pr_pipeline
+    triggers:
+      - github-pull-request:
+          <<: *ghprb_defaults
+          status-url: http://ci.theforeman.org/blue/organizations/jenkins/$JOB_NAME/detail/$JOB_NAME/$BUILD_ID/pipeline
+
