Rewrite scripts to use ghprb variables

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/scm/foreman-packaging.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/scm/foreman-packaging.yaml
@@ -30,4 +30,5 @@
             recursive: true
           skip-tag: true
           branches:
-            - 'upstream/{branch}'
+            - '${ghprbActualCommit}'
+          refspec: '+refs/pull/*:refs/remotes/upstream/pr/*'
