--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_test_pull_request.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_test_pull_request.yaml
@@ -7,12 +7,6 @@
     properties:
       - github:
           url: https://github.com/theforeman/foreman-packaging
-    parameters:
-      - string:
-          name: branch
-          default:
-          description: "Base branch to merge PR into"
-      - pr_parameters
     scm:
       - foreman-rpm-packaging-pr
     triggers:
@@ -55,10 +49,10 @@
           block: true
           predefined-parameters: |
             scratch=true
-            branch=${branch}
-            pr_number=${pr_number}
-            pr_git_url=${pr_git_url}
-            pr_git_ref=${pr_git_ref}
+            branch=${ghprbTargetBranch}
+            pr_number=${ghprbPullId}
+            pr_git_url=${ghprbAuthorRepoGitUrl}
+            pr_git_ref=${ghprbSourceBranch}
           parameter-factories:
             - factory: filebuild
               file-pattern: test_builds/rpm/*.properties
