Fix nightly RPM builds

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_trigger_installer_develop.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_trigger_installer_develop.yaml
@@ -26,4 +26,4 @@
           artifacts: 'pkg/*'
           only-if-success: false
       - release_nightly_build_foreman:
-          project: foreman-installer
+          project: packages/foreman/foreman-installer
