--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_proxy_develop.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_proxy_develop.yaml
@@ -45,4 +45,4 @@
           artifacts: 'pkg/*'
           only-if-success: true
       - release_nightly_build_foreman:
-          project: foreman-proxy
+          project: packages/foreman/foreman-proxy
