Split release_nightly_build foreman into rpm and deb

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_trigger_installer_develop.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_trigger_installer_develop.yaml
@@ -25,5 +25,7 @@
       - archive:
           artifacts: 'pkg/*'
           only-if-success: false
-      - release_nightly_build_foreman:
+      - release_nightly_build_foreman_rpm:
           project: packages/foreman/foreman-installer
+      - release_nightly_build_foreman_deb:
+          project: foreman-installer
