--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_develop.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_develop.yaml
@@ -44,8 +44,10 @@
           only-if-success: false
       - junit:
           results: 'jenkins/reports/unit/*.xml'
-      - release_nightly_build_foreman:
+      - release_nightly_build_foreman_rpm:
           project: packages/foreman/foreman
+      - release_nightly_build_foreman_deb:
+          project: foreman
       - trigger-parameterized-builds:
         - project: test_katello
           condition: SUCCESS
