--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_proxy_develop.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_proxy_develop.yaml
@@ -44,5 +44,7 @@
       - archive:
           artifacts: 'pkg/*'
           only-if-success: true
-      - release_nightly_build_foreman:
+      - release_nightly_build_foreman_rpm:
           project: packages/foreman/foreman-proxy
+      - release_nightly_build_foreman_deb:
+          project: foreman-proxy
