--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_kafo_master.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_kafo_master.yaml
@@ -19,21 +19,21 @@
           type: user-defined
           name: ruby
           values:
-          - 2.0.0
-          - 2.1
-          - 2.2
-          - 2.3
-          - 2.4
+          - '2.0'
+          - '2.1'
+          - '2.2'
+          - '2.3'
+          - '2.4'
       - axis:
           type: user-defined
           name: puppet
           values:
-          - 4.10.0
-          - 5.0
+          - '4.10'
+          - '5.0'
     execution-strategy:
-      combination-filter: '!(ruby ==~ /^2\.[0-3]\..*/ && puppet ==~ /^5\..*/)'
+      combination-filter: '!(ruby ==~ /^2\.[0-3]/ && puppet ==~ /^5\..*/)'
       touchstone:
-        expr: 'ruby=="2.1" && puppet=="4.10.0"'
+        expr: 'ruby=="2.1" && puppet=="4.10"'
         result: 'stable'
     builders:
       - test_kafo
