Only retrieve the relevant PR with GHPRB
By setting this refspec we only retrieve the PR that we need to build
rather than every single PR. This saves a bandwidth, IO and thus time,
especially as the repository gets older.

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/scm/foreman-packaging.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/scm/foreman-packaging.yaml
@@ -31,4 +31,4 @@
           skip-tag: true
           branches:
             - '${ghprbActualCommit}'
-          refspec: '+refs/pull/*:refs/remotes/upstream/pr/*'
+          refspec: '+refs/pull/${ghprbPullId}/*:refs/remotes/upstream/pr/${ghprbPullId}/*'
