--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/scm/kafo.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/scm/kafo.yaml
@@ -14,4 +14,4 @@
           wipe-workspace: true
           branches:
             - '${ghprbActualCommit}'
-          refspec: '+refs/pull/*:refs/remotes/origin/pr/*'
+          refspec: '+refs/pull/${ghprbPullId}/*:refs/remotes/origin/pr/${ghprbPullId}/*'
