--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,6 @@ addons:
     packages:
     - yajl-tools
 install:
-  - git clone --depth 1 -b local git://github.com/theforeman/jenkins-job-builder.git
-  - (cd jenkins-job-builder && pip install --user -r requirements.txt && pip install --user .)
+  - pip install --user jenkins-job-builder
   - (cd puppet && bundle install)
 script: ./.travis.sh
