Switch obal function to named parameters

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/triggers/github_pr.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/triggers/github_pr.yaml
@@ -25,6 +25,7 @@
     triggers:
       - github-pull-request:
           <<: *ghprb_defaults
+          status-url: http://ci.theforeman.org/blue/organizations/jenkins/$JOB_NAME/detail/$JOB_NAME/$BUILD_ID/pipeline
           white-list-target-branches:
             - rpm/develop
 
@@ -34,4 +35,3 @@
       - github-pull-request:
           <<: *ghprb_defaults
           status-url: http://ci.theforeman.org/blue/organizations/jenkins/$JOB_NAME/detail/$JOB_NAME/$BUILD_ID/pipeline
-
