--- a/.gitmodules
+++ b/.gitmodules
@@ -128,3 +128,6 @@
 [submodule "puppet/modules/translate"]
 	path = puppet/modules/translate
 	url = https://github.com/puppetlabs/puppetlabs-translate.git
+[submodule "puppet/modules/docker"]
+	path = puppet/modules/docker
+	url = https://github.com/puppetlabs/puppetlabs-docker
